Fixed bug #42773 (WSDL error causes HTTP 500 Response)